syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

import "monopoly/property.proto";

// type : "prompt_purchase"
// packet_type : REQUEST
message PromptPurchaseRequest {
  PropertyInfo property = 1;
  repeated PropertyLevel levels = 2;
  // Whether this property can be upgraded right now. Only purchased
  // land/property that has not reached the upgrade limit can be upgraded.
  bool is_upgrade = 7;
  int32 money_after_purchase = 8;
}

// type : "prompt_purchase"
// packet_type : REQUEST
message PromptPurchaseResponse { bool purchased = 1; }